Fix align text in form inputs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+/@media screen and (-webkit-min-device-pixel-ratio:0)/
+input[type=date].form-control, input[type=time].form-control, input[type=datetime-local].form-control, input[type=month].form-control {
+    line-height: 0px !important;
+}
 
 a:hover{
   text-decoration: none;
